--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "rent-a-gran",
   "private": true,
   "dependencies": {
+    "2": "^3.0.0",
     "@popperjs/core": "^2.11.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
     "bootstrap": "^5.1.3",
+    "jquery": "^3.6.0",
     "mapbox-gl": "^2.7.0",
+    "select": "^1.1.2",
+    "select2": "^4.1.0-rc.0",
     "stimulus": "^3.0.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
