--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@rails/webpacker": "5.4.3",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "jquery-bar-rating": "^1.2.2",
     "mapbox-gl": "^2.7.0",
     "select": "^1.1.2",
     "select2": "^4.1.0-rc.0",
